deployment/k8sdeployments/config/kong/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: operator-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/methods: GET,POST,PUT,DELETE,PATCH,OPTIONS
    configuration.konghq.com: operator-kongingress
    konghq.com/plugins: operator-kong-plugin
spec:
  tls:
   - secretName: operator-secret
  rules:
  - http:
      paths:
      - path: /v8/storage
        backend:
          serviceName: sdi-gateway-block
          servicePort: 8444
      - path: /v8/compute
        backend:
          serviceName: sdi-gateway-compute
          servicePort: 8444
      - path: /v8/network
        backend:
          serviceName: sdi-gateway-network
          servicePort: 8444
      - path: /v8/baremetal
        backend:
          serviceName: sdi-gateway-baremetal
          servicePort: 8444
      - path: /config
        backend:
          serviceName: sdi-gateway-block
          servicePort: 8444
